Bug 1627414 - getDisplayMedia does not work when firefox is full screen on macOS r=spohl

Change the GetScreenCapturePermissionState() heuristic to use the full window list instead of just on-screen windows to allow it it to work in full screen mode.

Differential Revision: https://phabricator.services.mozilla.com/D70931

--HG--
extra : moz-landing-system : lando